<resources>
   
    <string name="app_name">BookFood</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">饿了</string>
    <!-- 主页面 -->
    <string name="rice">盖饭</string>
    <string name="stir">小炒</string>
    <string name="noodle">面食</string>
    <string name="beverage">饮料</string>
    <string name="cart">购物车</string>
    <string name="logon">登录</string>
    <string name="feedback">留言</string>
    <string name="aboutus">关于我们</string> 
    
    <!-- 登录页面 -->
    <string name="login_username_label">账户</string>
    <string name="login_username_hint">昵称/手机号</string>
    <string name="login_password_label">密码</string>
    <string name="login_register_link">没有账号？ <a href="#" mce_href="#">注册</a></string>
    <string name="logout_btn_label">注销已登录用户</string>
    
    <!-- 注册页面 -->
    <string name="username_label">输入账户</string>
    <string name="password_label">输入密码</string>
    <string name="password_again_label">确认密码</string>
    <string name="submit_btn_label">提交注册信息</string>
    
    <!-- 菜单页面 -->
    <string name="item_name_tip">菜名</string>
    <string name="item_num_tip">数量</string>
    <string name="item_price_tip">单价</string>
    <string name="item_confirm">加入购物车</string>
    
    <!-- 购物车页面 -->
    <string name="empty_tip">还没有订单哦~~亲~~</string>
    <string name="fill_info">结算</string>
    <string name="sumup_label">总计</string>
    <string name="usercall">顾客称呼</string>
    <string name="address">配送地址</string>
    <string name="phone">联系电话</string>
    <string name="send_order">提交订单</string>
    <string name="delete_resureTitle">提示</string>
    <string name="delete_resureTip">确认删除</string>
    <string name="deleteForDialog">删除</string>
    <string name="cancelForDialog">取消</string>
    
    <!-- 留言页面 -->
    <string name="putforward">提交留言</string>
    
    <!-- test -->
    <string name="title">通过Get和Post两种方式分别提交数据到服务器</string>  
    <string name="book_name">书本名称</string>  
    <string name="book_price">书本价格</string>  
    <string name="success">提交成功</string>  
    <string name="error">提交失败</string>  
    <string name="get_request">Get请求提交</string>  
    <string name="post_request">Post请求提交</string>  
    

</resources>