<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#616161">
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingTop="50dip"
     android:paddingLeft="32dip">
     
     <LinearLayout
         android:layout_width="260dip"
         android:layout_height="130dip"
         android:layout_weight="1"
         android:orientation="horizontal">
         <Button
             android:id="@+id/rice_btn"
             android:layout_width="126dip"
             android:layout_height="126dip"
             android:background="#5CACEE"
             android:text="@string/rice"
             android:textSize="35dip"
             android:textColor="#FFFFFF"
             android:gravity="bottom|right">
         </Button>
         <Button
             android:id="@+id/stir_btn"
             android:layout_width="126dip"
             android:layout_height="126dip"
             android:layout_marginLeft="4dip"
             android:background="#EEC900"
             android:text="@string/stir"
             android:textSize="35dip"
             android:textColor="#FFFFFF"
             android:gravity="bottom|left">
         </Button>
         
     </LinearLayout>
      <LinearLayout
         android:layout_width="260dip"
         android:layout_height="130dip"
         android:layout_weight="1"
         android:orientation="horizontal">
         <Button
             android:id="@+id/noodle_btn"
             android:layout_width="126dip"
             android:layout_height="126dip"
             android:background="#EE8262"
             android:text="@string/noodle"
             android:textSize="35dip"
             android:textColor="#FFFFFF"
             android:gravity="top|right">
         </Button>
         <Button
             android:id="@+id/beverage_btn"
             android:layout_width="126dip"
             android:layout_height="126dip"
             android:layout_marginLeft="4dip"
             android:background="#66CD00"
             android:text="@string/beverage"
             android:textSize="35dip"
             android:textColor="#FFFFFF"
             android:gravity="top|left">
         </Button>
         
     </LinearLayout>
      <LinearLayout
         android:layout_width="260dip"
         android:layout_height="130dip"
         android:layout_weight="1"
         android:orientation="horizontal">

         <Button
             android:id="@+id/cart_btn"
             android:layout_width="126dp"
             android:layout_height="126dip"
             android:background="#CD96CD" 
             android:text="@string/cart"
             android:gravity="top|center_horizontal"
             android:textSize="35dip"
             android:textColor="#FFFFFF">

         </Button>
         <LinearLayout
             android:layout_width="126dip"
             android:layout_height="126dip"
             android:layout_marginLeft="4dip"
             android:orientation="vertical"
             android:layout_weight="1">
             <Button
                android:id="@+id/logon_btn"
                android:layout_width="126dip"
                android:layout_height="61dip"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="@string/logon"
                android:gravity="left|top"
                android:textSize="20dip"
                android:textColor="#000000">
             </Button>
             <LinearLayout
                 android:layout_weight="1"
                 android:layout_height="61dip"
                 android:layout_width="126dip"
                 android:orientation="horizontal"
                 android:layout_marginTop="4dip">
                    <Button
                       android:id="@+id/feedback_btn"
                       android:layout_width="61dip"
                       android:layout_height="61dip"
                       android:background="#FFFFFF"
                       android:text="@string/feedback" 
                       android:gravity="left|top"
                       android:textSize="13dip"
                       android:textColor="#000000">
                    </Button>
                    <Button
                       android:id="@+id/aboutus_btn"
                       android:layout_width="61dip"
                       android:layout_height="61dip"
                       android:layout_marginLeft="4dip"
                       android:background="#FFFFFF"
                       android:text="@string/aboutus"
                       android:gravity="left|top"
                       android:textSize="13dip"
                       android:textColor="#000000">
                    </Button>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
     
     
 </LinearLayout>
</RelativeLayout>
